Fixed Spacing

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -80,7 +80,7 @@
 
 @media screen and (max-width: 500px) {
     .left-text {
-        margin-left: 10vw;
+        margin-left: 8vw;
     }
 
     .right-text {
